--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="container nav" role="navigation" aria-label="Main">
     <div class="brand">
       <!-- Header Logo -->
-      <img class="logo" src="https://sdmntprwestus2.oaiusercontent.com/files/00000000-3560-61f8-9caf-1f0c53120bc9/raw?se=2025-09-13T03%3A57%3A18Z&sp=r&sv=2024-08-04&sr=b&scid=7eef670c-53e4-5f50-9db4-ee0c8eecd57b&skoid=c953efd6-2ae8-41b4-a6d6-34b1475ac07c&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-12T21%3A02%3A17Z&ske=2025-09-13T21%3A02%3A17Z&sks=b&skv=2024-08-04&sig=kO%2BffIa6RI2FgpQZQepgH3A/fnO9lVA5%2BSq1I4QcDlI%3D" alt="FindFirst logo" />
+      <img class="logo" src="https://github.com/adfindlater/findfirst-homepage/blob/main/ChatGPT%20Image%20Sep%2013%2C%202025%2C%2011_54_19%20AM.png" alt="FindFirst logo" />
       <span>FindFirst</span>
     </div>
     <nav aria-label="Primary">
@@ -92,7 +92,7 @@
     </div>
     <div class="card" aria-labelledby="first-60">
       <div style="display:flex;align-items:center;gap:10px">
-        <img src="https://sdmntprwestus2.oaiusercontent.com/files/00000000-3560-61f8-9caf-1f0c53120bc9/raw?se=2025-09-13T03%3A57%3A18Z&sp=r&sv=2024-08-04&sr=b&scid=7eef670c-53e4-5f50-9db4-ee0c8eecd57b&skoid=c953efd6-2ae8-41b4-a6d6-34b1475ac07c&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-12T21%3A02%3A17Z&ske=2025-09-13T21%3A02%3A17Z&sks=b&skv=2024-08-04&sig=kO%2BffIa6RI2FgpQZQepgH3A/fnO9lVA5%2BSq1I4QcDlI%3D" alt="FindFirst castle mark" style="height:26px;width:auto"/>
+        <img src="https://github.com/adfindlater/findfirst-homepage/blob/main/ChatGPT%20Image%20Sep%2013%2C%202025%2C%2011_54_19%20AM.png" alt="FindFirst castle mark" style="height:26px;width:auto"/>
         <strong id="first-60">What you get in the first 30–60 days</strong>
       </div>
       <ul style="margin-top:10px;color:#475569;line-height:1.7">
@@ -205,7 +205,7 @@
   <div class="container" style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px">
     <div class="brand">
       <!-- Footer Logo -->
-      <img class="logo" src="https://sdmntprwestus2.oaiusercontent.com/files/00000000-3560-61f8-9caf-1f0c53120bc9/raw?se=2025-09-13T03%3A57%3A18Z&sp=r&sv=2024-08-04&sr=b&scid=7eef670c-53e4-5f50-9db4-ee0c8eecd57b&skoid=c953efd6-2ae8-41b4-a6d6-34b1475ac07c&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-12T21%3A02%3A17Z&ske=2025-09-13T21%3A02%3A17Z&sks=b&skv=2024-08-04&sig=kO%2BffIa6RI2FgpQZQepgH3A/fnO9lVA5%2BSq1I4QcDlI%3D" alt="FindFirst logo" />
+      <img class="logo" src="https://github.com/adfindlater/findfirst-homepage/blob/main/ChatGPT%20Image%20Sep%2013%2C%202025%2C%2011_54_19%20AM.png" alt="FindFirst logo" />
       <span>FindFirst</span>
     </div>
     <div>© <span id="year"></span> FindFirst, Inc. • Data & AI assurance for the builders</div>
