--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="container nav" role="navigation" aria-label="Main">
     <div class="brand">
       <!-- Header Logo -->
-      <img class="logo" src="https://github.com/adfindlater/findfirst-homepage/blob/main/ChatGPT%20Image%20Sep%2013%2C%202025%2C%2011_54_19%20AM.png" alt="FindFirst logo" />
+      <img class="logo" src="ChatGPT%20Image%20Sep%2013%2C%202025%2C%2011_54_19%20AM.png" alt="FindFirst logo" />
       <span>FindFirst</span>
     </div>
     <nav aria-label="Primary">
