--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       --grad: linear-gradient(135deg,#38bdf8 0%, #a78bfa 100%);
       --shadow-1: 0 6px 20px rgba(16,24,40,.08);
       --shadow-2: 0 16px 40px rgba(16,24,40,.12);
+      --logo-h: 44px;           /* ↑ bigger header/footer logo */
+      --logo-h-hero: 36px;      /* ↑ bigger hero card mark */
+      --logo-h-xl: 120px;       /* oversized brand display */
     }
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
@@ -24,8 +27,8 @@
     /* NAV */
     header{position:sticky;top:0;z-index:50;background:rgba(246,248,251,.9);backdrop-filter:blur(8px);border-bottom:1px solid var(--stroke)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:900;color:var(--ink)}
-    .logo{height:28px;width:auto;display:block}
+    .brand{display:flex;align-items:center;gap:12px;font-weight:900;color:var(--ink)}
+    .logo{height:var(--logo-h);width:auto;display:block}
     nav a.pill{padding:6px 12px;border:1px solid var(--stroke);border-radius:999px;background:#fff;color:#3c4657;font-size:13px;margin-left:6px}
     .btn{padding:12px 18px;border-radius:12px;font-weight:700;transition:all .15s ease}
     .btn-primary{background:var(--grad);color:#fff;box-shadow:var(--shadow-1)}
@@ -58,6 +61,8 @@
     .stat .n{font-size:26px;font-weight:900;color:var(--ink)}
 
     .pedigree-badge{background:var(--grad);color:#fff;font-weight:700;padding:10px 14px;border-radius:12px;display:inline-block;margin-top:16px;box-shadow:var(--shadow-1)}
+    .brand-showcase{display:flex;align-items:center;justify-content:center;gap:18px;flex-direction:column}
+    .logo-xl{height:var(--logo-h-xl);width:auto;display:block;filter:drop-shadow(0 10px 30px rgba(2,6,23,.08))}
     footer{border-top:1px solid var(--stroke);padding:20px 0;background:#fbfcfe;color:#6b7280}
   </style>
 </head>
@@ -91,8 +96,8 @@
       </div>
     </div>
     <div class="card" aria-labelledby="audit-deliverables">
-      <div style="display:flex;align-items:center;gap:10px">
-        <img src="logo.png" alt="FindFirst mark" style="height:26px;width:auto"/>
+      <div style="display:flex;align-items:center;gap:12px">
+        <img src="logo.png" alt="FindFirst mark" style="height:var(--logo-h-hero);width:auto"/>
         <strong id="audit-deliverables">What you get in 30–60 days</strong>
       </div>
       <ul style="margin-top:8px;color:#475569;line-height:1.7">
@@ -101,6 +106,16 @@
         <li>Risk register ranked by business impact & effort</li>
         <li>Prioritized roadmap with quick wins & ROI estimates</li>
       </ul>
+    </div>
+  </div>
+</section>
+
+<!-- Brand Showcase (large logo) -->
+<section class="section" aria-label="Brand">
+  <div class="container brand-showcase">
+    <img src="logo.png" class="logo-xl" alt="FindFirst logo large" />
+    <div class="lead" style="margin:0;text-align:center">
+      A clear standard for <strong>Independent Data & AI Audits</strong>
     </div>
   </div>
 </section>
